test_scores/negative_dimers/features/Q14974.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q14974.pkl.xz